Minor fixes to animations on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,11 @@
 }
 
 .fade-in {
-    animation: fadeIn 1s ease 0s 1 normal forwards running;
+    animation: fadeIn 0.5s ease 0s 1 normal forwards running;
 }
 
 .fade-out {
-    animation: fadeOut 1s ease 0s 1 normal forwards running;
+    animation: fadeOut 0.5s ease 0s 1 normal forwards running;
 }
 
 .scrollable {
@@ -116,7 +116,7 @@ section a {
     display: grid;
     grid-auto-rows: calc(100 / 7vh);
     grid-template-columns: 1fr 1fr;
-    height: 100%;;
+    height: 100%;
 }
 
 .postgresql {
@@ -146,7 +146,6 @@ section a {
     bottom: 15%;
     grid-column: 1 / 3;
     grid-row: 3;
-    right: 20%;
 }
 
 .full-portfolio {
@@ -176,7 +175,7 @@ section a {
 }
 
 .javascript {
-    top: 2rem;
+    top: 1rem;
     grid-column: 2;
     grid-row: 6;
     right: 3rem;
@@ -186,7 +185,6 @@ section a {
     bottom: 3rem;
     grid-column: 1 / 3;
     grid-row: 7;
-    right: 8rem;
 }
 
 .technology {
